--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Top D-Racer</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-    <script src="scripts/game.js"></script>
+    <script src="scripts/play.js"></script>
     <script src="scripts/garage.js"></script>
     <script src="scripts/leaderboard.js"></script>
     <script src="scripts/settings.js"></script>
+    <script src="classes/button.js"></script>
+    <script src="classes/car.js"></script>
   </head>
   <body>
     <main></main>
