--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="scripts/garage.js"></script>
     <script src="scripts/leaderboard.js"></script>
     <script src="scripts/settings.js"></script>
+    <script src="scripts/login.js"></script>
+    <script src="scripts/signup.js"></script>
     <script src="classes/button.js"></script>
     <script src="classes/car.js"></script>
   </head>
