--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="scripts/settings.js"></script>
     <script src="classes/button.js"></script>
     <script src="classes/car.js"></script>
+    <script src="classes/map.js"></script>
   </head>
   <body>
     <main></main>
