added health bar and boost bar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="scripts/login.js"></script>
     <script src="scripts/signup.js"></script>
     <script src="classes/button.js"></script>
+    <script src="classes/health.js"></script>
+    <script src="classes/boost.js"></script>
     <script src="classes/car.js"></script>
     <script src="classes/map.js"></script>
   </head>
