--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Swiggle</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    
+
+    <script src="scripts/title.js"></script>
     <script src="scripts/play.js"></script>
     <script src="scripts/garage.js"></script>
     <script src="scripts/leaderboard.js"></script>
@@ -19,6 +20,6 @@
   </head>
   <body>
     <main></main>
-    <script src="title.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
