--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swiggle</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.dom.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <!-- Classes -->
+    <script src="classes/map.js"></script>
+    <script src="classes/car.js"></script>
+    <script src="classes/button.js"></script>
+
+    <!-- JSON Data Script -->
+    <script src="scripts/jsondata.js"></script>
+
+    <!-- Sketches -->
     <script src="scripts/title.js"></script>
     <script src="scripts/play.js"></script>
     <script src="scripts/garage.js"></script>
@@ -14,12 +24,11 @@
     <script src="scripts/settings.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/signup.js"></script>
-    <script src="classes/button.js"></script>
-    <script src="classes/car.js"></script>
-    <script src="classes/map.js"></script>
+
+    <!-- Main Sketch Manager -->
+    <script src="main.js"></script>
   </head>
   <body>
-    <main></main>
-    <script src="main.js"></script>
+    <main id="main"></main>
   </body>
 </html>
