--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.dom.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <!-- Globals -->
+    <script src="classes/globals.js"></script>
+    <script src="classes/keybinds.js"></script>
+
     <!-- Classes -->
     <script src="classes/map.js"></script>
     <script src="classes/car.js"></script>
