--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Classes -->
     <script src="classes/map.js"></script>
     <script src="classes/car.js"></script>
+    <script src="classes/UI.js"></script>
     <script src="classes/button.js"></script>
 
     <!-- JSON Data Script -->
