--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Classes -->
     <script src="classes/map.js"></script>
+    <script src="classes/mapGen.js"></script>
     <script src="classes/car.js"></script>
     <script src="classes/button.js"></script>
 
