--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="classes/button.js"></script>
 
     <!-- JSON Data Script -->
-    <script src="scripts/jsondata.js"></script>
+    <script src="scripts/jsonData.js"></script>
 
     <!-- Sketches -->
     <script src="scripts/title.js"></script>
