--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <script src="classes/keybinds.js"></script>
 
     <!-- Classes -->
-    <script src="classes/map.js"></script>
+    <script src="classes/physics.js"></script>
     <script src="classes/car.js"></script>
+    <script src="classes/building.js"></script>
+    <script src="classes/map.js"></script>
     <script src="classes/button.js"></script>
 
     <!-- JSON Data Script -->
