--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    
+    <script src="classes/physics.js"></script>
     <!-- Globals -->
     <script src="classes/globals.js"></script>
     <script src="classes/keybinds.js"></script>
-
+    
     <!-- Classes -->
-    <script src="classes/physics.js"></script>
-    <script src="classes/car.js"></script>
+    <script src="classes/button.js"></script>
+
+    <script src="classes/helper.js"></script>
+    <script src="classes/collider.js"></script>
+    <script src="classes/gameObject.js"></script>
     <script src="classes/building.js"></script>
     <script src="classes/map.js"></script>
-    <script src="classes/button.js"></script>
+    <script src="classes/car.js"></script>
 
     <!-- JSON Data Script -->
     <script src="scripts/jsondata.js"></script>
