--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="classes/car.js"></script>
 
     <!-- JSON Data Script -->
-    <script src="scripts/jsondata.js"></script>
+    <script src="scripts/jsonData.js"></script>
 
     <!-- Sketches -->
     <script src="scripts/title.js"></script>
