--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     <script src="classes/keybinds.js"></script>
     
     <!-- Classes -->
-    <script src="classes/physics.js"></script>
     <script src="classes/gameObject.js"></script>
     <script src="classes/collider.js"></script>
+    <script src="classes/car.js"></script>
+    <script src="classes/enemy.js"></script>
+    <script src="classes/physics.js"></script>
     <script src="classes/mapObject.js"></script>
     <script src="classes/mapGen.js"></script>
-    <script src="classes/car.js"></script>
     <script src="classes/button.js"></script>
     <script src="classes/helper.js"></script>
 
