My weekly push.
Added coin class, currency (stored in JSON), image/animation for coins, currency display in Garage, debug checkbox for title screen to allow better debugging/ toggle it off globally easier.
Credits page to start posting where our images and assets we didn't make ourselves are from.

Slight code clarity in some cases via comments, few lines of redundant code removed, index.html updated.

Game over screen now properly calls switchSketch instead of simply restarting the draw loop for the game

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <script src="classes/button.js"></script>
     <script src="classes/helper.js"></script>
 
+
+    <script src="classes/coin.js"></script>
+    <script src="classes/currency.js"></script>
+    <script src="classes/score.js"></script>
+
     <!-- JSON Data Script -->
     <script src="scripts/jsonData.js"></script>
 
