--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <!-- Sketches -->
     <script src="scripts/title.js"></script>
     <script src="scripts/play.js"></script>
+    <script src="scripts/levels.js"></script>
     <script src="scripts/garage.js"></script>
     <script src="scripts/leaderboard.js"></script>
     <script src="scripts/settings.js"></script>
