--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!--pixelated font-->
     <link href="graphics/pixelFont.ttf">
+    <link rel="shortcut icon" href="#">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swiggle</title>
