going well so far.
good pal Tyrian

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script src="scripts/settings.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/signup.js"></script>
+    <script src="scripts/mapEditor.js"></script>
 
 
     <script src="scripts/loading.js"></script>
