complete new enemy types, added van car type
added truck enemy, motorcycle enemy, and van car

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="classes/gameObject.js"></script>
     <script src="classes/collider.js"></script>
     <script src="classes/car.js"></script>
+    <script src="classes/van.js"></script>
     <script src="classes/enemy.js"></script>
     <script src="classes/physics.js"></script>
     <script src="classes/mapObject.js"></script>
