--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="classes/button.js"></script>
     <script src="classes/helper.js"></script>
     
-
+    <script src="classes/playHUD.js"></script>
     <script src="classes/coin.js"></script>
     <script src="classes/items.js"></script>
     <script src="classes/currency.js"></script>
