added a separate class for the hud

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     <script src="scripts/login.js"></script>
     <script src="scripts/signup.js"></script>
     <script src="scripts/mapEditor.js"></script>
-
+    <script src="scripts/hud.js"></script>
+    
 
     <script src="scripts/loading.js"></script>
     
