Organized Item Creation
new file for item creation to simplify the play sketch file and make the code more readable

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     
     <script src="classes/coin.js"></script>
     <script src="classes/items.js"></script>
+    <script src="classes/itemsCreation.js"></script>
     <script src="classes/currency.js"></script>
     <script src="classes/score.js"></script>
 
