moved hud to classes

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="classes/itemsCreation.js"></script>
     <script src="classes/currency.js"></script>
     <script src="classes/score.js"></script>
+    <script src="classes/hud.js"></script>
 
     
 
@@ -51,7 +52,6 @@
     <script src="scripts/login.js"></script>
     <script src="scripts/signup.js"></script>
     <script src="scripts/mapEditor.js"></script>
-    <script src="scripts/hud.js"></script>
     
 
     <script src="scripts/loading.js"></script>
