--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
     
     <!-- Core Classes (in dependency order!) -->
-    <script src="classes/_gameEngine.js"></script> <!-- defines GameObject -->
+    <script src="classes/gameEngine.js"></script> <!-- defines GameObject -->
     <script src="scripts/jsonData.js"></script>
-    <script src="classes/_globals.js"></script>
-    <script src="classes/_helper.js"></script>
-    <script src="classes/_map.js"></script>
-    <script src="classes/_vehicles.js"></script>
+    <script src="classes/globals.js"></script>
+    <script src="classes/helper.js"></script>
+    <script src="classes/map.js"></script>
+    <script src="classes/vehicles.js"></script>
     <script src="classes/mapGen.js"></script>
+
     <script src="classes/items.js"></script> <!-- uses GameObject -->
     <script src="classes/sounds.js"></script>
     <script src="classes/keybinds.js"></script>
