Actually not bad procedural?

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <script src="classes/map.js"></script>
     <script src="classes/vehicles.js"></script>
     <script src="classes/mapGen.js"></script>
+    <script src="classes/mapBuildingFunction.js"></script>
+    <script src="classes/mapRoadFunction.js"></script>
 
     <script src="classes/items.js"></script> <!-- uses GameObject -->
     <script src="classes/sounds.js"></script>
