--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="classes/globals.js"></script>
     <script src="classes/helper.js"></script>
     <script src="classes/map.js"></script>
+    <script src="classes/pathfinding.js"></script>
     <script src="classes/vehicles.js"></script>
     <script src="classes/mapGen.js"></script>
     <script src="classes/mapBuildingFunction.js"></script>
